fixed z-index

--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -12,7 +12,7 @@ footer.primary-footer {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    z-index: 1020;
+    z-index: $zindex-sticky;
   }
   .navbar-brand img {
     height: 35px;
